# structs

./: Cargo.toml
src/: lib.rs
src/music/: const.rs  mod.rs  traits.rs
src/music/artist/: actors.rs  mod.rs  model.rs
src/music/sample/: model.rs
src/music/track/: model.rs
src/util/: mod.rs  serde_duration.rs  serde_duration_opt.rs
